welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: value unary_! is not a member of Int
    while (!a==10){
           ^close10:7: error: reassignment to val
      a=a+1
       ^close10:11: error: value unary_! is not a member of Int
    while (!a==10){
           ^close10:13: error: reassignment to val
      a=a-1
       ^close10:17: error: value unary_! is not a member of Int
    while (!b==10){
           ^close10:19: error: reassignment to val
      b=b+1
       ^close10:23: error: value unary_! is not a member of Int
    while (!b==10){
           ^close10:25: error: reassignment to val
      a=a-1
       ^